--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
 <li>Probabilidade</li>
 <li>Variáveis aleatórias</li>  
-<li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
-<li><a href="html/svad.html" target="_blank">Simulação de vaa's discretas</a></li>
-<li><a href="html/svac.html" target="_blank">Simulação de vaa's contínuas</a></li>
-<li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
-<li>Lei dos grandes números</li>
-<li>Teorema central do limite</li>
+<li>Teoremas limites</li>
+<li><a href="html/sna.html" target="_blank">Simulação</a>: números aleatórios</li>
+<li><a href="html/svad.html" target="_blank">Simulação</a>: vaa's discretas</li>
+<li><a href="html/svac.html" target="_blank">Simulação</a>: vaa's contínuas</li>
+<li><a href="html/snmv.html" target="_blank">Simulação</a>: normal multivariada</li>
 <li>Processos de Bernoulli</li>
 <li>Processos de Poisson</li>
 <li>Cadeias de Markov finitas</li>
-<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
-<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
+<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a> 
+(<a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a>)</li>
 </ol>
 </p>
 
@@ -67,16 +66,15 @@
 <li><a href="html/introestinf01.html" target="_blank">Inferência:</a> grandes amostras</li>
 <li>Inferência: população normal</li>  
 </ul>  
-<li>Estimação</li>
-<li>Teste de hipóteses</li>
+<li>Estimação com R</li>
+<li>Teste de hipóteses com R</li>
 <ul>
-<li><a href="html/th1R.html" target="_blank">THs com R:</a> parte I</li>
-<li>THs com R: parte II</a></li>
-<li><a href="html/th3R.html" target="_blank">THs com R:</a> parte III</li>
+<li><a href="html/th1R.html" target="_blank">THs:</a> I</li>
+<li>THs: II</a></li>
+<li><a href="html/th3R.html" target="_blank">THs:</a> III</li>
 </ul>
 <li><a href="html/anova1fR.html" target="_blank">ANOVA</a> com 1 fator</li>
 <li>Regressão linear simples</li>
-<li>Correlação</li>
 <li>Regressão linear múltipla</li>
 </ol>
 </p>
