--- a/index.html
+++ b/index.html
@@ -95,14 +95,16 @@
 
 <h4>Cálculo numérico</h4>
 <p align="justify">
-<ol start="1">
-<li>Raízes de funções reais</li>
-<li>Soluções de sistemas lineares</li>
-<li>Soluções de sistemas não lineares</li>
+<ol start="0">
+<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
+<li>Sistemas lineares</li>
+<li>Interpolação</li>
+<li>Regressão</li>
 <li>Diferenciação numérica</li>
-<li>Integração numérica</li>
+<li>Integração numérica</li> 
+<li>Raízes de equações</li>
+<li>Sistemas não lineares</li>
 <li>Otimização numérica</li>
-<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
 </ol>
 </p>
 
