--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 
 <body>
 
-<h3>Disciplinas</h3>
+<h3>Tópicos</h3>
+<!-- 
 <p align="justify">
 <ul>
 <li>Probabilidade e estatística</li>
 <li>Estatística computacional</li>
 </ul>
 </p>
-
+-->
+  
 <!-- Comentário -->
 
-<h3>Tópicos</h3>
 <h4>Estatística descritiva e R</h4>
 <p align="justify">
-<ol start="1">
+<ol start="0">
 <li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
 <li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
@@ -40,7 +41,7 @@
 
 <h4>Probabilidade e simulação</h4>
 <p align="justify">
-<ol start="1">
+<ol start="0">
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
 <li>Probabilidade</li>
 <li>Variáveis aleatórias</li>  
@@ -59,7 +60,7 @@
 
 <h4>Estatística inferencial</h4>
 <p align="justify">
-<ol start="1">
+<ol start="0">
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Inferência: uma população</li>
 <ul>
@@ -81,22 +82,21 @@
 
 <h4>Estatística computacional</h4>
 <p align="justify">
-<ol start="1">
-<li>Simulação Monte Carlo</li>
-<li>Bootstrap</li>
-<li>Validação cruzada</li>
+<ol start="0">
+<li><font color="red">&bull;</font> <a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>  
+<li>Métodos Monte Carlo</li>
+<li>Bootstrap e validação cruzada</li>
+<li>Validação cruzada</li> 
 <li>Métodos MCMC</li>
-<li>Redes neurais artificiais (RNAs)</li>
-<li>RNAs para regressão</li>
-<li>RNAs para classificação</li>
-<li>Agrupamento de dados</li>
+<li>Metaheurísticas</li>
+<li>Redes neurais artificiais</li>
 </ol>
 </p>
 
 <h4>Cálculo numérico</h4>
 <p align="justify">
 <ol start="0">
-<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
+<li><font color="red">&bull;</font> <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
 <li>Sistemas lineares</li>
 <li>Interpolação</li>
 <li>Regressão</li>
@@ -111,7 +111,6 @@
 <h4>Outros links</h4>
 <p align="justify">
 <ol start="1">
-<li><a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>
 <li><a href="pdf/ec.pdf" target="_blank">Latex/Template | PDF</a></li>
 <li><a href="pdf/ectxt.pdf" target="_blank">Latex/Template | TEX</a></li>
 <li><a href="https://en.wikibooks.org/wiki/LaTeX" target="_blank">Latex</a></li>
