--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
 <ol start="0">
 <li><font color="red">&bull;</font> <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
 <li>Sistemas lineares</li>
-<li>Interpolação</li>
-<li>Regressão</li>
-<li>Diferenciação numérica</li>
-<li>Integração numérica</li> 
+<li>Interpolação e regressão</li>
+<li>Integração numérica</li>
+<li>Diferenciação numérica</li> 
 <li>Raízes de equações</li>
 <li>Sistemas não lineares</li>
 </ol>
