--- a/index.html
+++ b/index.html
@@ -21,24 +21,6 @@
   
 <!-- Comentário -->
 
-<h4>Estatística descritiva e R</h4>
-<p align="justify">
-<ol start="0">
-<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
-<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
-<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
-<ul>
-<li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
-<li><a href="pdf/csrmarkdown.pdf" target="_blank">R markdown cheat sheet</a></li>  
-<li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
-<li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>
-<li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
-<li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
-<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
-</ul>
-</ol>
-</p>
-
 <h4>Probabilidade e simulação</h4>
 <p align="justify">
 <ol start="0">
@@ -58,6 +40,24 @@
 </ol>
 </p>
 
+<h4>Estatística descritiva e R</h4>
+<p align="justify">
+<ol start="0">
+<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
+<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
+<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
+<ul>
+<li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
+<li><a href="pdf/csrmarkdown.pdf" target="_blank">R markdown cheat sheet</a></li>  
+<li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
+<li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>
+<li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
+<li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
+<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
+</ul>
+</ol>
+</p>
+  
 <h4>Estatística inferencial</h4>
 <p align="justify">
 <ol start="0">
@@ -81,26 +81,21 @@
 
 <h4>Estatística computacional</h4>
 <p align="justify">
-<ol start="0">
-<li><font color="red">&bull;</font> <a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>  
-<li>Métodos Monte Carlo</li>
-<li>Bootstrap e validação cruzada</li>
-<li>Métodos MCMC</li>
-<li>Otimização numérica</li>
-<li>Metaheurísticas</li>
-</ol>
-</p>
-
-<h4>Cálculo numérico</h4>
-<p align="justify">
-<ol start="0">
-<li><font color="red">&bull;</font> <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
+<ol start="1">
+<li>Raízes de equações</li>
 <li>Sistemas lineares</li>
-<li>Interpolação e regressão</li>
+<li>Sistemas não lineares</li>  
+<li>Interpolação</li>
+<li>Ajuste de curvas</li>  
 <li>Integração numérica</li>
 <li>Diferenciação numérica</li> 
-<li>Raízes de equações</li>
-<li>Sistemas não lineares</li>
+<li>Simulação</li>
+<li>Métodos Monte Carlo</li>
+<li>Otimização e metaheurísticas</li>  
+<li>Bootstrap e validação cruzada</li>
+<li>Métodos MCMC</li>
+<li><font color="red">&bull;</font> <a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>  
+<li><font color="red">&bull;</font> <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
 </ol>
 </p>
 
