--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
 <!-- Comentário -->
 
-<h4>Probabilidade e simulação</h4>
+<h4>Probabilidade</h4>
 <p align="justify">
 <ol start="0">
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
