--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
 <li>Diferenciação numérica</li> 
 <li>Simulação</li>
 <li>Métodos Monte Carlo</li>
-<li>Otimização e metaheurísticas</li>  
-<li>Bootstrap e validação cruzada</li>
+<li>Otimização</li>
+<li>Metaheurísticas</li>
+<li>Bootstrap</li>
+<li>Validação cruzada</li>  
 <li>Métodos MCMC</li>
 <li><font color="red">&bull;</font> <a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>  
 <li><font color="red">&bull;</font> <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
