--- a/html/ed.html
+++ b/html/ed.html
@@ -21,11 +21,18 @@
 <li>Parâmetros populacionais</li>
 <li>Estatísticas</li>  
 </ul>
-<li>Resumo e visualização de dados</li>
+<li>Visualização e resumo de dados categóricos</li>
+<ul>
+<li>Tabelas de frequências e proporções</li>
+<li>Gráfico de barras</li>
+<li>Gráfico de setores</li>
+<li>Tabelas de dupla entrada</li>
+<li>Associação</li>  
+</ul>
+<li>Visualização e resumo de dados numéricos</li> 
 <ul>
 <li>Tabelas de frequências</li>
 <li>Gráfico de barras</li>
-<li>Gráfico de setores</li>
 <li>Histograma</li>
 <li>Média e mediana</li>
 <li>Variância e desvio padrão</li>
@@ -33,16 +40,11 @@
 <li>p-Quantil</li>
 <li>Amplitude</li>
 <li>Box-plot</li>
-</ul>
-<li>Análise bidimensional</li>
-<ul>
 <li>Tabelas de dupla entrada</li>
-<li>Duas variáveis categóricas</li>
-<li>Duas variáveis numéricas</li>
-<li>Categórica x numérica</li>
 <li>Associação</li>  
 </ul>
-<li>Análise multidimensional</li>
+<li>Análise bivariada</li>
+<li>Análise multivariada</li>
 </ol>
 </p>
 
