--- a/html/ed.html
+++ b/html/ed.html
@@ -21,15 +21,15 @@
 <li>Parâmetros populacionais</li>
 <li>Estatísticas</li>  
 </ul>
-<li>Visualização e resumo de dados categóricos</li>
+<li>Resumo de dados categóricos</li>
 <ul>
 <li>Tabelas de frequências e proporções</li>
 <li>Gráfico de barras</li>
 <li>Gráfico de setores</li>
-<li>Tabelas de dupla entrada</li>
+<li>Dados bivariados</li>
 <li>Associação</li>  
 </ul>
-<li>Visualização e resumo de dados numéricos</li> 
+<li>Resumo de dados numéricos</li> 
 <ul>
 <li>Tabelas de frequências</li>
 <li>Gráfico de barras</li>
@@ -40,7 +40,8 @@
 <li>p-Quantil</li>
 <li>Amplitude</li>
 <li>Box-plot</li>
-<li>Tabelas de dupla entrada</li>
+<li>Dados bivariados</li>
+<li>A reta de mínimos quadrados</li>
 <li>Associação</li>  
 </ul>
 <li>Análise bivariada</li>
