--- a/html/ed.html
+++ b/html/ed.html
@@ -23,7 +23,8 @@
 </ul>
 <li>Resumo de dados categóricos</li>
 <ul>
-<li>Tabelas de frequências e proporções</li>
+<li>Tabelas de frequências</li>
+<li>Proporções</li>  
 <li>Gráfico de barras</li>
 <li>Gráfico de setores</li>
 <li>Dados bivariados</li>
@@ -41,7 +42,7 @@
 <li>Amplitude</li>
 <li>Box-plot</li>
 <li>Dados bivariados</li>
-<li>A reta de mínimos quadrados</li>
+<li>Reta de mínimos quadrados</li>
 <li>Associação</li>  
 </ul>
 <li>Análise bivariada</li>
