--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
 
-<h3>Tópicos</h3>
-<!-- 
+<!--
+<h3>Tópicos</h3> 
 <p align="justify">
 <ul>
 <li>Probabilidade e estatística</li>
@@ -26,8 +26,11 @@
 <ol start="0">
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
 <li>Probabilidade</li>
-<li>Variáveis aleatórias</li>  
+<li>Variáveis aleatórias</li>
+<li>Vetores aleatórios</li>
+<li>Momentos</li>
 <li>Teoremas limites</li>
+<li>Processos estocásticos: intro</li>
 <li>Processos de Bernoulli</li>
 <li>Processos de Poisson</li>
 <li>Cadeias de Markov finitas</li>  
@@ -40,11 +43,15 @@
 </ol>
 </p>
 
-<h4>Estatística descritiva e R</h4>
+<h4>Estatística</h4>
 <p align="justify">
 <ol start="0">
-<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
-<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
+<li>Estatística</li>
+<ul>
+<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva (EstD)</a></li>
+<li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial (EstInf)</a></li>
+</ul>
+<li><a href="html/edR.html" target="_blank">EstD com R</a></li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
 <ul>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
@@ -55,20 +62,10 @@
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 </ul>
-</ol>
-</p>
-  
-<h4>Estatística inferencial</h4>
-<p align="justify">
-<ol start="0">
-<li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
-<li>Inferência: uma população</li>
-<ul>
-<li><a href="html/introestinf01.html" target="_blank">Inferência:</a> grandes amostras</li>
-<li>Inferência: população normal</li>  
-</ul>  
-<li>Estimação com R</li>
-<li>Teste de hipóteses com R</li>
+<li><a href="html/introestinf01.html" target="_blank">EstInf:</a> grandes amostras</li>
+<li>EstInf: população normal</li>  
+<li>Estimação</li>
+<li>Teste de hipóteses</li>
 <ul>
 <li><a href="html/th1R.html" target="_blank">THs:</a> I</li>
 <li>THs: II</a></li>
@@ -79,7 +76,7 @@
 </ol>
 </p>
 
-<h4>Estatística computacional</h4>
+<h4>Cálculo numérico</h4>
 <p align="justify">
 <ol start="1">
 <li>Raízes de equações</li>
@@ -88,10 +85,10 @@
 <li>Interpolação</li>
 <li>Ajuste de curvas</li>  
 <li>Integração numérica</li>
-<li>Diferenciação numérica</li> 
+<li>Diferenciação numérica</li>
+<li>Otimização</li>
 <li>Simulação</li>
 <li>Métodos Monte Carlo</li>
-<li>Otimização</li>
 <li>Metaheurísticas</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>  
