--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <ol start="0">
 <li>Estatística</li>
 <ul>
-<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva (EstD)</a></li>
-<li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial (EstInf)</a></li>
+<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">[EstD] Estatística descritiva</a></li>
+<li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">[EstInf] Estatística inferencial</a></li>
 </ul>
 <li><a href="html/edR.html" target="_blank">EstD com R</a></li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
@@ -65,7 +65,7 @@
 <li><a href="html/introestinf01.html" target="_blank">EstInf:</a> grandes amostras</li>
 <li>EstInf: população normal</li>  
 <li>Estimação</li>
-<li>Teste de hipóteses</li>
+<li>[THs] Teste de hipóteses</li>
 <ul>
 <li><a href="html/th1R.html" target="_blank">THs:</a> I</li>
 <li>THs: II</a></li>
