--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <!-- Comentário -->
 
 <h4>Probabilidade</h4>
+<h4><a href="html/prob.html" target="_blank">Probabilidade</a></h4>
+  
 <p align="justify">
-<ol start="0">
-<li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
+<ol start="1">
 <li>Probabilidade</li>
 <li>Variáveis aleatórias</li>
 <li>Vetores aleatórios</li>
@@ -44,13 +45,11 @@
 </p>
 
 <h4>Estatística</h4>
+<h4>[EstD] <a href="html/ed.html" target="_blank">Estatística descritiva</a></h4>
+<h4>[EstInf] <a href="html/estb.html" target="_blank">Estatística inferencial</a></h4>
+  
 <p align="justify">
-<ol start="0">
-<li>Estatística</li>
-<ul>
-<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">[EstD] Estatística descritiva</a></li>
-<li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">[EstInf] Estatística inferencial</a></li>
-</ul>
+<ol start="1">
 <li><a href="html/edR.html" target="_blank">EstD com R</a></li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
 <ul>
@@ -76,7 +75,7 @@
 </ol>
 </p>
 
-<h4>Cálculo numérico</h4>
+<h4>Métodos computacionais</h4>
 <p align="justify">
 <ol start="1">
 <li>Raízes de equações</li>
@@ -87,9 +86,9 @@
 <li>Integração numérica</li>
 <li>Diferenciação numérica</li>
 <li>Otimização</li>
+<li>Metaheurísticas</li>  
 <li>Simulação</li>
 <li>Métodos Monte Carlo</li>
-<li>Metaheurísticas</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>  
 <li>Métodos MCMC</li>
