--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   
 <!-- Comentário -->
 
-<h4>Probabilidade</h4>
 <h4><a href="html/prob.html" target="_blank">Probabilidade</a></h4>
   
 <p align="justify">
@@ -45,8 +44,10 @@
 </p>
 
 <h4>Estatística</h4>
-<h4>[EstD] <a href="html/ed.html" target="_blank">Estatística descritiva</a></h4>
-<h4>[EstInf] <a href="html/estb.html" target="_blank">Estatística inferencial</a></h4>
+<p align="justify">
+[EstD] <a href="html/ed.html" target="_blank">Estatística descritiva</a><br>
+[EstInf] <a href="html/estb.html" target="_blank">Estatística inferencial</a>
+</p>
   
 <p align="justify">
 <ol start="1">
@@ -76,6 +77,7 @@
 </p>
 
 <h4>Métodos computacionais</h4>
+
 <p align="justify">
 <ol start="1">
 <li>Raízes de equações</li>
@@ -98,6 +100,7 @@
 </p>
 
 <h4>Outros links</h4>
+
 <p align="justify">
 <ol start="1">
 <li><a href="pdf/ec.pdf" target="_blank">Latex/Template | PDF</a></li>
