--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </ol>
 </p>
 
-<h4>Estatística</h4>
+<h4>Estatística</h4><br>
 <p align="justify">
 [EstD] <a href="html/ed.html" target="_blank">Estatística descritiva</a><br>
 [EstInf] <a href="html/estb.html" target="_blank">Estatística inferencial</a>
