--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   
 <!-- Comentário -->
 
-<h4><a href="html/prob.html" target="_blank">Probabilidade</a></h4>
+<h4>Probabilidade e Estatística</h4>
+
+<p><a href="html/prob.html" target="_blank">[Prob]</a> <b>Probabilidade</b></p>
   
 <p align="justify">
 <ol start="1">
@@ -43,10 +45,9 @@
 </ol>
 </p>
 
-<h4>Estatística</h4><br>
 <p align="justify">
-[EstD] <a href="html/ed.html" target="_blank">Estatística descritiva</a><br>
-[EstInf] <a href="html/estb.html" target="_blank">Estatística inferencial</a>
+<a href="html/ed.html" target="_blank">[EstD]</a> <b>Estatística descritiva</b><br>
+<a href="html/estb.html" target="_blank">[EstInf]</a> <b>Estatística inferencial</b>
 </p>
   
 <p align="justify">
@@ -76,7 +77,7 @@
 </ol>
 </p>
 
-<h4>Métodos computacionais</h4>
+<p><b>Métodos computacionais</b></p>
 
 <p align="justify">
 <ol start="1">
@@ -99,7 +100,7 @@
 </ol>
 </p>
 
-<h4>Outros links</h4>
+<p><b>Outros links</b></p>
 
 <p align="justify">
 <ol start="1">
