--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<!-- Comentário -->
 <!--
 <h3>Tópicos</h3> 
 <p align="justify">
@@ -19,8 +20,6 @@
 </p>
 -->
   
-<!-- Comentário -->
-
 <h4>Probabilidade e Estatística</h4>
 
 <p><a href="html/prob.html" target="_blank">[Prob]</a> <b>Probabilidade</b></p>
@@ -45,15 +44,15 @@
 </ol>
 </p>
 
-<p align="justify">
-<a href="html/ed.html" target="_blank">[EstD]</a> <b>Estatística descritiva</b><br>
-<a href="html/estb.html" target="_blank">[EstInf]</a> <b>Estatística inferencial</b>
-</p>
-  
+<p align="justify"><b>Estatística</b></p>
+
 <p align="justify">
 <ol start="1">
-<li><a href="html/edR.html" target="_blank">EstD com R</a></li>
-<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
+<li><a href="html/ed.html" target="_blank">[EstD]</a> Estatística descritiva</li>
+<ul>
+  <li><a href="html/edR.html" target="_blank">EstD com R</a></li>
+</ul>
+<li><a href="html/intror.html" target="_blank">R: intro</a></li>
 <ul>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
 <li><a href="pdf/csrmarkdown.pdf" target="_blank">R markdown cheat sheet</a></li>  
@@ -63,8 +62,11 @@
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 </ul>
-<li><a href="html/introestinf01.html" target="_blank">EstInf:</a> grandes amostras</li>
-<li>EstInf: população normal</li>  
+<li><a href="html/estb.html" target="_blank">[EstInf]</a> Estatística inferencial: intro</li>
+<ul>
+<li><a href="html/introestinf01.html" target="_blank">EstInf:</a>Caso: grandes amostras</li>
+<li>Caso: população normal</li>
+</ul>  
 <li>Estimação</li>
 <li>[THs] Teste de hipóteses</li>
 <ul>
