--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <ol start="1">
 <li><a href="html/ed.html" target="_blank">[EstD]</a> Estatística descritiva</li>
 <ul>
-  <li><a href="html/edR.html" target="_blank">EstD com R</a></li>
+<li><a href="html/edR.html" target="_blank">EstD com R</a></li>
 </ul>
 <li><a href="html/intror.html" target="_blank">R: intro</a></li>
 <ul>
@@ -64,7 +64,7 @@
 </ul>
 <li><a href="html/estb.html" target="_blank">[EstInf]</a> Estatística inferencial: intro</li>
 <ul>
-<li><a href="html/introestinf01.html" target="_blank">EstInf:</a>Caso: grandes amostras</li>
+<li>Caso: <a href="html/introestinf01.html" target="_blank">grandes amostras</a></li>
 <li>Caso: população normal</li>
 </ul>  
 <li>Estimação</li>
