--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
 <h4>Probabilidade e Estatística</h4>
 
-<p><a href="html/prob.html" target="_blank">[Prob]</a> <b>Probabilidade</b></p>
+<p><b>Probabilidade</b> <a href="html/prob.html" target="_blank">[Prob]</a></p>
   
 <p align="justify">
 <ol start="1">
@@ -48,7 +48,7 @@
 
 <p align="justify">
 <ol start="1">
-<li><a href="html/ed.html" target="_blank">[EstD]</a> Estatística descritiva</li>
+<li>Estatística descritiva <a href="html/ed.html" target="_blank">[EstD]</a></li>
 <ul>
 <li><a href="html/edR.html" target="_blank">EstD com R</a></li>
 </ul>
@@ -62,13 +62,13 @@
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 </ul>
-<li><a href="html/estb.html" target="_blank">[EstInf]</a> Estatística inferencial: intro</li>
+<li>Estatística inferencial: intro <a href="html/estb.html" target="_blank">[EstInf]</a></li>
 <ul>
 <li>Caso: <a href="html/introestinf01.html" target="_blank">grandes amostras</a></li>
 <li>Caso: população normal</li>
 </ul>  
 <li>Estimação</li>
-<li>[THs] Teste de hipóteses</li>
+<li>Teste de hipóteses [THs]</li>
 <ul>
 <li><a href="html/th1R.html" target="_blank">THs:</a> I</li>
 <li>THs: II</a></li>
