--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
   
 <h4>Probabilidade e Estatística</h4>
 
-<p><b>Probabilidade</b> <a href="html/prob.html" target="_blank">[Prob]</a></p>
+<p>
+<a href="html/prob.html" target="_blank">[Prob]</a><\br>
+<a href="html/ed.html" target="_blank">[EstD]</a><\br>
+<a href="html/estb.html" target="_blank">[EstInf]</a>
+</p>
   
 <p align="justify">
-<ol start="1">
+<ol start="0">
+<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a> 
+(<a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a>)</li>
 <li>Probabilidade</li>
 <li>Variáveis aleatórias</li>
 <li>Vetores aleatórios</li>
@@ -34,25 +40,16 @@
 <li>Processos estocásticos: intro</li>
 <li>Processos de Bernoulli</li>
 <li>Processos de Poisson</li>
-<li>Cadeias de Markov finitas</li>  
-<li><a href="html/sna.html" target="_blank">Simulação</a>: números aleatórios</li>
-<li><a href="html/svad.html" target="_blank">Simulação</a>: vaa's discretas</li>
-<li><a href="html/svac.html" target="_blank">Simulação</a>: vaa's contínuas</li>
-<li><a href="html/snmv.html" target="_blank">Simulação</a>: normal multivariada</li>
-<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a> 
-(<a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a>)</li>
-</ol>
-</p>
-
-<p align="justify"><b>Estatística</b></p>
-
-<p align="justify">
-<ol start="1">
-<li>Estatística descritiva <a href="html/ed.html" target="_blank">[EstD]</a></li>
+<li>Cadeias de Markov finitas</li>
+<li>Simulação</li>
 <ul>
-<li><a href="html/edR.html" target="_blank">EstD com R</a></li>
+<li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
+<li><a href="html/svad.html" target="_blank">Variáveis aleatórias discretas</a></li>
+<li><a href="html/svac.html" target="_blank">Variáveis aleatórias contínuas</a></li>
+<li><a href="html/snmv.html" target="_blank">Distribuição normal multivariada</a></li>
 </ul>
-<li><a href="html/intror.html" target="_blank">R: intro</a></li>
+<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
+<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
 <ul>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
 <li><a href="pdf/csrmarkdown.pdf" target="_blank">R markdown cheat sheet</a></li>  
