--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <h4>Probabilidade e Estatística</h4>
 
 <p>
-<a href="html/prob.html" target="_blank">[Prob]</a><\br>
-<a href="html/ed.html" target="_blank">[EstD]</a><\br>
+<br><a href="html/prob.html" target="_blank">[Prob]</a>, 
+<a href="html/ed.html" target="_blank">[EstD]</a>, 
 <a href="html/estb.html" target="_blank">[EstInf]</a>
 </p>
   
