--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
   
 <h4>Probabilidade e Estatística</h4>
 
-<br><a href="html/prob.html" target="_blank">[Prob]</a>, 
-<a href="html/ed.html" target="_blank">[EstD]</a>, 
-<a href="html/estb.html" target="_blank">[EstInf]</a>
-  
 <p align="justify">
-<ol start="0">
+<ol start="-1">
+<li><a href="html/prob.html" target="_blank">[Prob]</a>, 
+<a href="html/ed.html" target="_blank">[EstD]</a>, 
+<a href="html/estb.html" target="_blank">[EstInf]</a></li>
 <li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a> 
 (<a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a>)</li>
 <li>Probabilidade</li>
@@ -35,10 +34,11 @@
 <li>Vetores aleatórios</li>
 <li>Momentos</li>
 <li>Teoremas limites</li>
-<li>Processos estocásticos: intro</li>
-<li>Processos de Bernoulli</li>
-<li>Processos de Poisson</li>
+<li>Ensaios de Bernoulli</li>
+<li>O processos de Poisson</li>
+<li>O movimento Browniano</li>
 <li>Cadeias de Markov finitas</li>
+<li>Processos estocásticos: intro</li>
 <li>Simulação</li>
 <ul>
 <li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
@@ -57,10 +57,11 @@
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 </ul>
-<li>Estatística inferencial: intro <a href="html/estb.html" target="_blank">[EstInf]</a></li>
+<li>Intro estatística inferencial</li>
 <ul>
-<li>Caso: <a href="html/introestinf01.html" target="_blank">grandes amostras</a></li>
-<li>Caso: população normal</li>
+<li>População normal</li>
+<li><a href="html/introestinf01.html" target="_blank">grandes amostras</a></li>
+<li>População de Bernoulli</li>
 </ul>  
 <li>Estimação</li>
 <li>Teste de hipóteses [THs]</li>
@@ -69,12 +70,13 @@
 <li>THs: II</a></li>
 <li><a href="html/th3R.html" target="_blank">THs:</a> III</li>
 </ul>
+<li>Testes qui-quadrado</li>
 <li><a href="html/anova1fR.html" target="_blank">ANOVA</a> com 1 fator</li>
 <li>Regressão linear simples</li>
 </ol>
 </p>
 
-<p><b>Métodos computacionais</b></p>
+<h4>Métodos Computacionais</h4>
 
 <p align="justify">
 <ol start="1">
@@ -87,7 +89,6 @@
 <li>Diferenciação numérica</li>
 <li>Otimização</li>
 <li>Metaheurísticas</li>  
-<li>Simulação</li>
 <li>Métodos Monte Carlo</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>  
@@ -97,7 +98,7 @@
 </ol>
 </p>
 
-<p><b>Outros links</b></p>
+<h4>Outros Links</h4>
 
 <p align="justify">
 <ol start="1">
