--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 <li>O processos de Poisson</li>
 <li>O movimento Browniano</li>
 <li>Cadeias de Markov finitas</li>
-<li>Processos estocásticos: intro</li>
+<li>Intro processos estocásticos</li>
 <li>Simulação</li>
 <ul>
 <li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Variáveis aleatórias discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Variáveis aleatórias contínuas</a></li>
-<li><a href="html/snmv.html" target="_blank">Distribuição normal multivariada</a></li>
+<li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
 </ul>
 <li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
@@ -59,18 +59,17 @@
 </ul>
 <li>Intro estatística inferencial</li>
 <ul>
-<li>População normal</li>
-<li><a href="html/introestinf01.html" target="_blank">grandes amostras</a></li>
-<li>População de Bernoulli</li>
+<li>A população normal</li>
+<li><a href="html/introestinf01.html" target="_blank">Grandes amostras</a></li>
+<li>A população de Bernoulli</li>
 </ul>  
 <li>Estimação</li>
 <li>Teste de hipóteses [THs]</li>
 <ul>
 <li><a href="html/th1R.html" target="_blank">THs:</a> I</li>
-<li>THs: II</a></li>
-<li><a href="html/th3R.html" target="_blank">THs:</a> III</li>
+<li>THs:</a> II</li>
 </ul>
-<li>Testes qui-quadrado</li>
+<li><a href="html/th3R.html" target="_blank">Testes qui-quadrado</a></li>
 <li><a href="html/anova1fR.html" target="_blank">ANOVA</a> com 1 fator</li>
 <li>Regressão linear simples</li>
 </ol>
