--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
 <li><a href="html/th3R.html" target="_blank">Testes qui-quadrado</a></li>
 <li><a href="html/anova1fR.html" target="_blank">ANOVA</a> com 1 fator</li>
 <li>Regressão linear simples</li>
+<li><a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>
 </ol>
 </p>
 
 <h4>Métodos Computacionais</h4>
 
 <p align="justify">
-<ol start="1">
+<ol start="0">
+<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
 <li>Raízes de equações</li>
 <li>Sistemas lineares</li>
 <li>Sistemas não lineares</li>  
@@ -91,9 +93,7 @@
 <li>Métodos Monte Carlo</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>  
-<li>Métodos MCMC</li>
-<li><font color="red">&bull;</font> <a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>  
-<li><font color="red">&bull;</font> <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
+<li>Métodos MCMC</li>  
 </ol>
 </p>
 
