--- a/index.html
+++ b/index.html
@@ -38,16 +38,8 @@
 <li>O processos de Poisson</li>
 <li>O movimento Browniano</li>
 <li>Cadeias de Markov finitas</li>
-<li>Intro processos estocásticos</li>
-<li>Simulação</li>
-<ul>
-<li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
-<li><a href="html/svad.html" target="_blank">Variáveis aleatórias discretas</a></li>
-<li><a href="html/svac.html" target="_blank">Variáveis aleatórias contínuas</a></li>
-<li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
-</ul>
-<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
-<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
+<li>Intro aos processos estocásticos</li>
+<li><a href="html/intror.html" target="_blank">Intro ao R</a></li>
 <ul>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
 <li><a href="pdf/csrmarkdown.pdf" target="_blank">R markdown cheat sheet</a></li>  
@@ -57,7 +49,15 @@
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 </ul>
-<li>Intro estatística inferencial</li>
+<li>Simulação</li>
+<ul>
+<li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
+<li><a href="html/svad.html" target="_blank">Variáveis aleatórias discretas</a></li>
+<li><a href="html/svac.html" target="_blank">Variáveis aleatórias contínuas</a></li>
+<li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
+</ul>
+<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
+<li>Intro à estatística inferencial</li>
 <ul>
 <li>A população normal</li>
 <li><a href="html/introestinf01.html" target="_blank">Grandes amostras</a></li>
