--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 <li>A população normal</li>
 <li><a href="html/introestinf01.html" target="_blank">Grandes amostras</a></li>
 <li>A população de Bernoulli</li>
-</ul>  
+</ul>
+<li>Família exponencial de distribuições</li>
 <li>Estimação</li>
 <li>Teste de hipóteses [THs]</li>
 <ul>
