--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <li>O processos de Poisson</li>
 <li>O movimento Browniano</li>
 <li>Cadeias de Markov finitas</li>
-<li>Intro aos processos estocásticos</li>
-<li><a href="html/intror.html" target="_blank">Intro ao R</a></li>
+<li>Introdução aos processos estocásticos</li>
+<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
 <ul>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
 <li><a href="pdf/csrmarkdown.pdf" target="_blank">R markdown cheat sheet</a></li>  
@@ -57,11 +57,11 @@
 <li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
 </ul>
 <li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
-<li>Intro à estatística inferencial</li>
+<li>Introdução à estatística inferencial</li>
 <ul>
-<li>A população normal</li>
-<li><a href="html/introestinf01.html" target="_blank">Grandes amostras</a></li>
-<li>A população de Bernoulli</li>
+<li>Caso: população normal</li>
+<li>Caso: <a href="html/introestinf01.html" target="_blank">Grandes amostras</a></li>
+<li>Caso: população de Bernoulli</li>
 </ul>
 <li>Família exponencial de distribuições</li>
 <li>Estimação</li>
