--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <li>Introdução à estatística inferencial</li>
 <ul>
 <li>Caso: população normal</li>
-<li>Caso: <a href="html/introestinf01.html" target="_blank">Grandes amostras</a></li>
+<li>Caso: <a href="html/introestinf01.html" target="_blank">grandes amostras</a></li>
 <li>Caso: população de Bernoulli</li>
 </ul>
 <li>Família exponencial de distribuições</li>
