--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <li>Momentos</li>
 <li>Teoremas limites</li>
 <li>Ensaios de Bernoulli</li>
-<li>O processos de Poisson</li>
+<li>O processo de Poisson</li>
 <li>O movimento Browniano</li>
 <li>Cadeias de Markov finitas</li>
 <li>Introdução aos processos estocásticos</li>
