--- a/html/prob.html
+++ b/html/prob.html
@@ -28,12 +28,12 @@
 </ul>
 <li>Variáveis aleatórias (Vaas)</li>
 <ul>
-<li>Vaas unidimensionais: definição</li>
+<li>Vaas unidimensionais</li>
 <li>Função de distribuição acumulada</li>
 <li>Vaas unidimensionais discretas</li>
 <li>Vaas unidimensionais contínuas</li>
 <li>Distribuição de uma vaa</li>
-<li>Vaas bidimensionais: definição</li>
+<li>Vaas bidimensionais</li>
 <li>Vaas bidimensionais discretas</li>
 <li>Vaas bidimensionais contínuas</li>
 <li>Vaas multidimensionais</li>
