--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 (<a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a>)</li>
 <li>Probabilidade</li>
 <li>Variáveis aleatórias</li>
-<li>Vetores aleatórios</li>
+<li>Variáveis aleatórias bidimensionais</li>
+<li>Variáveis aleatórias multimensionais</li>
 <li>Momentos</li>
 <li>Teoremas limites</li>
 <li>Ensaios de Bernoulli</li>
