--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li>Probabilidade</li>
 <li>Variáveis aleatórias</li>
 <li>Variáveis aleatórias bidimensionais</li>
-<li>Variáveis aleatórias multimensionais</li>
+<li>Variáveis aleatórias multidimensionais</li>
 <li>Momentos</li>
 <li>Teoremas limites</li>
 <li>Ensaios de Bernoulli</li>
