--- a/index.html
+++ b/index.html
@@ -29,17 +29,6 @@
 <a href="html/estb.html" target="_blank">[EstInf]</a></li>
 <li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a> 
 (<a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a>)</li>
-<li>Probabilidade</li>
-<li>Variáveis aleatórias</li>
-<li>Variáveis aleatórias bidimensionais</li>
-<li>Variáveis aleatórias multidimensionais</li>
-<li>Momentos</li>
-<li>Teoremas limites</li>
-<li>Ensaios de Bernoulli</li>
-<li>O processo de Poisson</li>
-<li>O movimento Browniano</li>
-<li>Cadeias de Markov finitas</li>
-<li>Introdução aos processos estocásticos</li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
 <ul>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
@@ -50,6 +39,17 @@
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 </ul>
+<li>Probabilidade</li>
+<li>Variáveis aleatórias</li>
+<li>Variáveis aleatórias bidimensionais</li>
+<li>Funções de variáveis aleatórias</li>
+<li>Momentos</li>
+<li>Teoremas limites</li>
+<li>Ensaios de Bernoulli</li>
+<li>Processo de Poisson</li>
+<li>Movimento Browniano</li>
+<li>Cadeias de Markov finitas</li>
+<li>Introdução aos processos estocásticos</li>
 <li>Simulação</li>
 <ul>
 <li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
@@ -57,12 +57,14 @@
 <li><a href="html/svac.html" target="_blank">Variáveis aleatórias contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
 </ul>
-<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
+<li>Estatística descritiva</li>
+<li><a href="html/edR.html" target="_blank">Funções do R para estatística descritiva</a></li>
 <li>Introdução à estatística inferencial</li>
 <ul>
-<li>Caso: população normal</li>
-<li>Caso: <a href="html/introestinf01.html" target="_blank">grandes amostras</a></li>
-<li>Caso: população de Bernoulli</li>
+<li>Probabilidade e inferência</li>  
+<li>Inferência para população normal</li>
+<li><a href="html/introestinf01.html" target="_blank">Inferência para grandes amostras</a></li>
+<li>Inferência para população de Bernoulli</li>
 </ul>
 <li>Família exponencial de distribuições</li>
 <li>Estimação</li>
@@ -83,9 +85,9 @@
 <p align="justify">
 <ol start="0">
 <li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>  
-<li>Raízes de equações</li>
+<li>Equações não-lineares</li>
 <li>Sistemas lineares</li>
-<li>Sistemas não lineares</li>  
+<li>Sistemas não-lineares</li>  
 <li>Interpolação</li>
 <li>Ajuste de curvas</li>  
 <li>Integração numérica</li>
