--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 <li>Probabilidade e inferência</li>  
 <li>Inferência para população normal</li>
 <li><a href="html/introestinf01.html" target="_blank">Inferência para grandes amostras</a></li>
-<li>Inferência para população de Bernoulli</li>
+<ul>
+<li>Caso: a população de Bernoulli</li>
 </ul>
+</ul>  
 <li>Família exponencial de distribuições</li>
 <li>Estimação</li>
 <li>Teste de hipóteses [THs]</li>
-<ul>
-<li><a href="html/th1R.html" target="_blank">THs:</a> I</li>
-<li>THs:</a> II</li>
-</ul>
+<li><a href="html/th1R.html" target="_blank">Funções do R para THs:</a> I</li>
+<li>Funções do R para THs:</a> II</li>
 <li><a href="html/th3R.html" target="_blank">Testes qui-quadrado</a></li>
 <li><a href="html/anova1fR.html" target="_blank">ANOVA</a> com 1 fator</li>
 <li>Regressão linear simples</li>
