--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 <li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
 </ul>
 <li>Estatística descritiva</li>
+<ul>
+<li>Análise univariada</li>  
+<li>Análise bivariada</li>
+<ul>  
 <li><a href="html/edR.html" target="_blank">Funções do R para estatística descritiva</a></li>
 <li>Introdução à estatística inferencial</li>
 <ul>
@@ -65,7 +69,7 @@
 <li>Inferência para população normal</li>
 <li><a href="html/introestinf01.html" target="_blank">Inferência para grandes amostras</a></li>
 <ul>
-<li>Caso: a população de Bernoulli</li>
+<li>A população de Bernoulli</li>
 </ul>
 </ul>  
 <li>Família exponencial de distribuições</li>
