--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 <li>Variáveis aleatórias bidimensionais</li>
 <li>Funções de variáveis aleatórias</li>
 <li>Momentos</li>
-<li>Teoremas limites</li>
-<li>Ensaios de Bernoulli</li>
+<li>A lei dos grandes números</li>
+<li>O teorema central do limite</li>
+<li>Processo de Bernoulli <font size="2">(Ensaios de Bernoulli)</font></li>
 <li>Processo de Poisson</li>
 <li>Movimento Browniano</li>
 <li>Cadeias de Markov finitas</li>
