--- a/index.html
+++ b/index.html
@@ -39,9 +39,21 @@
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 </ul>
+<li>Estatística descritiva</li>
+<ul>
+<li>Análise univariada</li>  
+<li>Análise bivariada</li>
+</ul> 
+<li><a href="html/edR.html" target="_blank">Funções do R para estatística descritiva</a></li>
 <li>Probabilidade</li>
 <li>Variáveis aleatórias</li>
-<li>Variáveis aleatórias bidimensionais</li>
+<li>Simulação de variáveis aleatórias</li>
+<ul>
+<li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
+<li><a href="html/svad.html" target="_blank">Variáveis aleatórias discretas</a></li>
+<li><a href="html/svac.html" target="_blank">Variáveis aleatórias contínuas</a></li>
+<li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
+</ul>
 <li>Funções de variáveis aleatórias</li>
 <li>Momentos</li>
 <li>A lei dos grandes números</li>
@@ -51,30 +63,19 @@
 <li>Movimento Browniano</li>
 <li>Cadeias de Markov finitas</li>
 <li>Introdução aos processos estocásticos</li>
-<li>Simulação</li>
-<ul>
-<li><a href="html/sna.html" target="_blank">Números aleatórios</a></li>
-<li><a href="html/svad.html" target="_blank">Variáveis aleatórias discretas</a></li>
-<li><a href="html/svac.html" target="_blank">Variáveis aleatórias contínuas</a></li>
-<li><a href="html/snmv.html" target="_blank">A normal multivariada</a></li>
-</ul>
-<li>Estatística descritiva</li>
-<ul>
-<li>Análise univariada</li>  
-<li>Análise bivariada</li>
-</ul> 
-<li><a href="html/edR.html" target="_blank">Funções do R para estatística descritiva</a></li>
 <li>Introdução à estatística inferencial</li>
 <ul>
+<li>Conceitos básicos</li>
 <li>Probabilidade e inferência</li>  
 <li>Inferência para população normal</li>
 <li><a href="html/introestinf01.html" target="_blank">Inferência para grandes amostras</a></li>
 <ul>
-<li>A população de Bernoulli</li>
+<li>População de Bernoulli</li>
 </ul>
 </ul>  
 <li>Família exponencial de distribuições</li>
-<li>Estimação</li>
+<li>Estimação pontual</li>
+<li>Estimação intervalar</li>
 <li>Teste de hipóteses [THs]</li>
 <li><a href="html/th1R.html" target="_blank">Funções do R para THs:</a> I</li>
 <li>Funções do R para THs:</a> II</li>
